--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 18:05:05 2018</p>
+         Last Run: Sun Oct 28 19:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>29</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>26</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>26</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "57",
-                 "59"
+                 "51",
+                 "56",
+                 "58"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "26",
-                 "26"
+                 "49",
+                 "39",
+                 "36"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 18:05:05 2018</p>
+         Last Run: Sun Oct 28 19:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -232,13 +232,13 @@
                         <td>10:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>-1</td>
-                        <td>-4</td>
-                        <td>23</td>
-                        <td>90</td>
+                        <td>-5</td>
+                        <td>22</td>
+                        <td>92</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>75</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -246,21 +246,21 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>21</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>77</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>2</td>
-                        <td>-1</td>
+                        <td>-2</td>
                         <td>9</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NW</td>
                         <td>79</td>
                      </tr>
@@ -306,9 +306,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "-5",
                  "-4",
-                 "-4",
-                 "-1"
+                 "-2"
                ]
              },
              {
@@ -370,7 +370,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "23",
+                 "22",
                  "21",
                  "9"
                ]
@@ -380,9 +380,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "90",
-                 "80",
-                 "69"
+                 "92",
+                 "81",
+                 "70"
                ]
              },
              {
@@ -390,8 +390,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "77",
+                 "74",
+                 "76",
                  "79"
                ]
              }
@@ -403,6 +403,206 @@
                                    };
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator4").innerHTML=MyNewChart.generateLegend();
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Sun Oct 28 19:05:04 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>3</td>
+                        <td>0</td>
+                        <td>7</td>
+                        <td>57</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>SSW</td>
+                        <td>66</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>4</td>
+                        <td>1</td>
+                        <td>7</td>
+                        <td>55</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>S</td>
+                        <td>67</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>19</td>
+                        <td>53</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>S</td>
+                        <td>67</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator5" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Line.extend({
+         name: "LineAlt",
+         draw: function () {
+         Chart.types.Line.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Temp (C)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "strokeColor":"rgba(92,0,141,1)",
+               "pointColor":"rgba(92,0,141,1)",
+               "fillColor":"rgba(92,0,141,0)",
+               "data":[
+                 "0",
+                 "1",
+                 "2"
+               ]
+             },
+             {
+               "label":"temperature",
+               "strokeColor":"rgba(252,49,18,1)",
+               "pointColor":"rgba(252,49,18,1)",
+               "fillColor":"rgba(252,49,18,0)",
+               "data":[
+                 "3",
+                 "4",
+                 "5"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).LineAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator5").innerHTML=MyNewChart.generateLegend();
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator6" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Bar.extend({
+         name: "BarAlt",
+         draw: function () {
+         Chart.types.Bar.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Percentage (%)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "strokeColor":"rgba(0,0,255,1)",
+               "fillColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "7",
+                 "7",
+                 "19"
+               ]
+             },
+             {
+               "label":"humidity",
+               "strokeColor":"rgba(40,177,255,1)",
+               "fillColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "57",
+                 "55",
+                 "53"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "strokeColor":"rgba(233,37,255,1)",
+               "fillColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "66",
+                 "67",
+                 "67"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).BarAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator6").innerHTML=MyNewChart.generateLegend();
                </script>
          <hr style="border-width:5px ">
       </div>
