--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 19:05:04 2018</p>
+         Last Run: Sun Oct 28 20:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>49</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -46,7 +46,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -58,7 +58,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -181,8 +181,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "51",
-                 "56",
-                 "58"
+                 "55",
+                 "57"
                ]
              },
              {
@@ -190,7 +190,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
+                 "50",
                  "39",
                  "36"
                ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 19:05:04 2018</p>
+         Last Run: Sun Oct 28 20:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 19:05:04 2018</p>
+         Last Run: Sun Oct 28 20:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -433,8 +433,8 @@
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>7</td>
-                        <td>57</td>
+                        <td>10</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSW</td>
@@ -445,11 +445,11 @@
                         <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>7</td>
-                        <td>55</td>
+                        <td>10</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>S</td>
+                        <td>SSW</td>
                         <td>67</td>
                      </tr>
                      <tr>
@@ -457,7 +457,7 @@
                         <td>Mostly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>19</td>
+                        <td>16</td>
                         <td>53</td>
                         <td>1</td>
                         <td>11</td>
@@ -570,9 +570,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "19"
+                 "10",
+                 "10",
+                 "16"
                ]
              },
              {
@@ -580,8 +580,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "55",
+                 "58",
+                 "56",
                  "53"
                ]
              },
