--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 23:05:03 2018</p>
+         Last Run: Mon Oct 29 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>3</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>51</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>49</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>38</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>32</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "56",
-                 "59"
+                 "51",
+                 "55",
+                 "58"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "38",
-                 "32"
+                 "21",
+                 "20",
+                 "18"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 23:05:03 2018</p>
+         Last Run: Mon Oct 29 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>22</td>
-                        <td>92</td>
+                        <td>20</td>
+                        <td>90</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>74</td>
+                        <td>WNW</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>18</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>-4</td>
-                        <td>21</td>
-                        <td>81</td>
-                        <td>0</td>
-                        <td>13</td>
-                        <td>NW</td>
-                        <td>76</td>
+                        <td>11</td>
+                        <td>WNW</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>2</td>
-                        <td>-2</td>
-                        <td>9</td>
-                        <td>70</td>
-                        <td>1</td>
-                        <td>13</td>
-                        <td>NW</td>
-                        <td>79</td>
+                        <td>-1</td>
+                        <td>8</td>
+                        <td>69</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WNW</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,8 +305,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-4",
-                 "-2"
+                 "-2",
+                 "-1"
                ]
              },
              {
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-1",
-                 "0",
+                 "1",
                  "2"
                ]
              }
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "22",
-                 "21",
-                 "9"
+                 "20",
+                 "18",
+                 "8"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "92",
-                 "81",
-                 "70"
+                 "90",
+                 "80",
+                 "69"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "76",
-                 "79"
+                 "89",
+                 "89",
+                 "89"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Oct 28 23:05:03 2018</p>
+         Last Run: Mon Oct 29 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -463,24 +463,24 @@
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>9</td>
-                        <td>59</td>
+                        <td>10</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSW</td>
-                        <td>64</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>10</td>
                         <td>56</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSW</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "0",
-                 "2",
+                 "1",
                  "4"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "3",
-                 "5",
+                 "4",
                  "6"
                ]
              }
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
+                 "10",
                  "10",
                  "16"
                ]
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
+                 "58",
                  "56",
                  "53"
                ]
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
-                 "65",
-                 "65"
+                 "66",
+                 "66",
+                 "66"
                ]
              }
            ]
